--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# libgirepository1.0-dev libcairo2-dev libmpv1
+# libgirepository1.0-dev libcairo2-dev libmpv1 libjpeg-dev zlib1g-dev libglfw3 python3-dev
+# gir1.2-pango-1.0
 
 glfw
 pyopengl
